# game

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.Doxyfile
src/com/nahuelio/game/: Game.cpp  Main.cpp  main.cpp
src/com/nahuelio/game/controller/: Controller.cpp  GameController.cpp  MainController.cpp  SoundController.cpp  WindowController.cpp
src/com/nahuelio/game/controller/game/: KeyboardController.cpp  ShaderController.cpp  ViewportController.cpp
src/com/nahuelio/game/controller/game/headers/: KeyboardController.h  ShaderController.h  ViewportController.h
src/com/nahuelio/game/controller/headers/: Controller.h  GameController.h  MainController.h  SoundController.h  WindowController.h
src/com/nahuelio/game/headers/: Game.h  Main.h  main.h
src/com/nahuelio/game/model/: Character.cpp  Screen.cpp
src/com/nahuelio/game/model/headers/: Character.h  Screen.h
src/com/nahuelio/game/resources/: application.qrc
src/com/nahuelio/game/view/main/: MainWindow.cpp
src/com/nahuelio/game/view/main/headers/: MainWindow.h
src/com/nahuelio/game/view/shaders/: FragmentShader.glsl  VertexShader.glsl
src/com/nahuelio/game/view/welcome/: Welcome.cpp  welcome.qml
src/com/nahuelio/game/view/welcome/headers/: Welcome.h
test/com/nahuelio/game/model/: Character_test.cpp
